--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ pool:
 
 variables:
   solution: '**/*.sln'
-  buildPlatform: 'Win32'
+  buildPlatform: 'x86'
   buildConfiguration: 'Release'
 
 steps:
