--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,22 +36,22 @@ steps:
     contents: |
       LICENSE
       README.md
-      bin\$(buildPlatform)\$(buildConfiguration)\*.exe
+      bin\$(buildConfiguration)\$(buildPlatform)\*.exe
     flattenFolders: true
     targetFolder: '$(Build.ArtifactStagingDirectory)\ToPublish'
 
 - task: ArchiveFiles@2
-  displayName: 'Creating archive: $(Build.ArtifactStagingDirectory)\$(Build.BuildNumber)-$(buildPlatform)-$(buildConfiguration).zip'
+  displayName: 'Creating archive: $(Build.ArtifactStagingDirectory)\$(Build.BuildNumber)-$(buildConfiguration)-$(buildPlatform).zip'
   inputs:
     rootFolderOrFile: '$(Build.ArtifactStagingDirectory)\ToPublish'
     includeRootFolder: false
     archiveType: 'zip'
-    archiveFile: '$(Build.ArtifactStagingDirectory)\$(Build.BuildNumber)-$(buildPlatform)-$(buildConfiguration).zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)\$(Build.BuildNumber)-$(buildConfiguration)-$(buildPlatform).zip'
     replaceExistingArchive: true
 
 - task: PublishPipelineArtifact@1
   displayName: 'Publish Artifact: drop-$(buildPlatform)'
   inputs:
-    targetPath: '$(Build.ArtifactStagingDirectory)\$(Build.BuildNumber)-$(buildPlatform)-$(buildConfiguration).zip'
+    targetPath: '$(Build.ArtifactStagingDirectory)\$(Build.BuildNumber)-$(buildConfiguration)-$(buildPlatform).zip'
     artifactType: pipeline
     artifactName: 'drop-$(buildPlatform)'
