--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -38,3 +38,13 @@ jobs:
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} /p:Platform=x64 ${{env.SOLUTION_FILE_PATH}}
+
+    - name: Create-artifact
+      uses: actions/upload-artifact@v4
+        with:
+          name: 'wakeonlan'
+          path: |
+            LICENSE
+            README.md
+            bin/**/*.exe
+         overwrite: true
