--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -39,12 +39,11 @@ jobs:
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} /p:Platform=x64 ${{env.SOLUTION_FILE_PATH}}
 
-    - name: Create-artifact
-      uses: actions/upload-artifact@v4
-        with:
-          name: 'wakeonlan'
-          path: |
-            LICENSE
-            README.md
-            bin/**/*.exe
-         overwrite: true
+    - uses: actions/upload-artifact@v4
+      with:
+        name: 'wakeonlan'
+        path: |
+          LICENSE
+          README.md
+          bin/**/*.exe
+        overwrite: true
